--- a/public/css/my.css
+++ b/public/css/my.css
@@ -255,24 +255,21 @@ a:hover {
 .my-nav-tabs-top .nav-tabs .nav-item {
   width: 129px;
   height: 50px;
-  border-top: 1px solid #C9CACA;
-  border-right: 1px solid #C9CACA;
-  border-bottom: 1px solid #C9CACA;
 }
 
 .my-nav-tabs-top .nav-tabs .nav-item a.nav-link {
   color: #3E3A39;
-  padding: 0;
   line-height: 48px;
+  padding: 1px 0 0 0;
+  border-top: 1px solid #C9CACA;
+  border-right: 1px solid #C9CACA;
+  border-bottom: 1px solid #C9CACA;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
 }
 
-.my-nav-tabs-top .nav-tabs .nav-item a.nav-link:hover {
-  border-bottom: none;
-}
-
 .my-nav-tabs-top .nav-tabs .nav-item a.active {
+  padding-top: 0;
   border-top: 2px solid #D83856;
   border-left: none;
   border-bottom: none;
@@ -562,6 +559,14 @@ a:hover {
   padding-bottom: 113px;
 }
 
+.job-list .tab-content {
+  margin-top: 1px;
+}
+
+.job-list .tab-content .list-group-item {
+  padding: 0;
+}
+
 .job-list .default-list {
   padding-top: 48px;
 }
@@ -710,13 +715,15 @@ a:hover {
   height: 30px;
 }
 
-.job-detail .job-detail-list .my-nav-tabs-top .nav-tabs .nav-item a {
+.job-detail .job-detail-list .my-nav-tabs-top .nav-tabs .nav-item a.nav-link {
   font-size: 14px;
   line-height: 28px;
+  padding-top: 0;
 }
 
 .job-detail .job-detail-list .my-nav-tabs-top .nav-tabs .nav-item a.active {
   border: none;
+  padding: 1px;
   background-color: #D83856;
   color: white;
 }
