--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -526,7 +526,7 @@ a:hover {
         margin-left: 87px;
         margin-bottom: 18px;
 
-        span {
+        > span {
           color: $color-red;
 
           &:first-child {
