--- a/public/css/my.css
+++ b/public/css/my.css
@@ -14,6 +14,10 @@ body {
   font-weight: normal;
 }
 
+li {
+  list-style-type: none;
+}
+
 a {
   color: #fff;
 }
@@ -742,5 +746,42 @@ a:hover {
   padding: 1px;
   background-color: #D83856;
   color: white;
+}
+
+.modal .modal-content {
+  width: 276px;
+  min-height: 256px;
+}
+
+.modal .modal-content .modal-body .container-fluid .row:nth-child(1) .col-auto {
+  padding-top: 27px;
+  padding-bottom: 30px;
+}
+
+.modal .modal-content .modal-body .container-fluid .row:nth-child(3) .col-auto {
+  padding-top: 21px;
+  padding-bottom: 31px;
+}
+
+.modal .modal-content .btn-modal {
+  width: 103px;
+  height: 34px;
+  line-height: 34px;
+  border-radius: 10px;
+  color: white;
+  padding: 0;
+}
+
+.modal .modal-content .btn-success {
+  background-color: #3FC382;
+}
+
+.modal .modal-content .btn-fail {
+  background-color: #F54847;
+}
+
+.modal .modal-content ul {
+  padding: 0;
+  margin: 0;
 }
 
