--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -44,6 +44,10 @@ body {
   font-weight: normal;
 }
 
+li {
+  list-style-type: none;
+}
+
 a {
   color: $color-white;
 }
@@ -711,7 +715,7 @@ a:hover {
     .row {
 
       &:nth-child(2) {
-      margin-top: 53px;
+        margin-top: 53px;
       }
       &:nth-child(3) {
         margin-top: 23px;
@@ -798,6 +802,54 @@ a:hover {
           }
         }
       }
+    }
+  }
+}
+
+.modal {
+  .modal-content {
+    width: 276px;
+    min-height: 256px;
+
+    .modal-body {
+      .container-fluid {
+        .row {
+          &:nth-child(1) {
+            .col-auto {
+              padding-top: 27px;
+              padding-bottom: 30px;
+            }
+          }
+          &:nth-child(3) {
+            .col-auto {
+              padding-top: 21px;
+              padding-bottom: 31px;
+            }
+          }
+        }
+      }
+    }
+
+    .btn-modal {
+      width: 103px;
+      height: 34px;
+      line-height: 34px;
+      border-radius: 10px;
+      color: white;
+      padding: 0;
+    }
+
+    .btn-success {
+      background-color: #3FC382;
+    }
+
+    .btn-fail {
+      background-color: #F54847;
+    }
+
+    ul {
+      padding: 0;
+      margin: 0;
     }
   }
 }
