--- a/public/css/my.css
+++ b/public/css/my.css
@@ -748,22 +748,90 @@ a:hover {
   color: white;
 }
 
-.modal .modal-content {
+.jobtype-modal .modal-dialog {
+  max-width: 840px;
+}
+
+.jobtype-modal .modal-dialog .modal-content {
+  width: 840px;
+  height: 550px;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-header {
+  height: 56px;
+  padding-left: 25px;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body {
+  padding: 0;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list {
+  width: 197px;
+  height: 490px;
+  padding: 12px 0;
+  font-size: 14px;
+  color: #3E3A39;
+  background: #fafafa;
+  overflow-y: scroll;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li {
+  height: 44px;
+  line-height: 44px;
+  padding-left: 22px;
+  cursor: pointer;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li a {
+  color: #3E3A39;
+  text-decoration: none;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body ul.jobtype-list li.selected {
+  padding-left: 18px;
+  border-left: 4px solid;
+  border-color: #D83856;
+  background-color: #fff;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body .jobtype-item {
+  height: 44px;
+  line-height: 44px;
+  font-size: 14px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body .jobtype-item svg {
+  color: #D83856;
+  border: 1px solid #D83856;
+}
+
+.jobtype-modal .modal-dialog .modal-content .modal-body .jobtype-item a {
+  margin-left: 8px;
+  line-height: 44px;
+}
+
+.msg-modal .modal-content {
   width: 276px;
   min-height: 256px;
 }
 
-.modal .modal-content .modal-body .container-fluid .row:nth-child(1) .col-auto {
+.msg-modal .modal-content .modal-body .container-fluid .row:nth-child(1) .col-auto {
   padding-top: 27px;
   padding-bottom: 30px;
 }
 
-.modal .modal-content .modal-body .container-fluid .row:nth-child(3) .col-auto {
+.msg-modal .modal-content .modal-body .container-fluid .row:nth-child(3) .col-auto {
   padding-top: 21px;
   padding-bottom: 31px;
 }
 
-.modal .modal-content .btn-modal {
+.msg-modal .modal-content .btn-modal {
   width: 103px;
   height: 34px;
   line-height: 34px;
@@ -772,15 +840,15 @@ a:hover {
   padding: 0;
 }
 
-.modal .modal-content .btn-success {
+.msg-modal .modal-content .btn-success {
   background-color: #3FC382;
 }
 
-.modal .modal-content .btn-fail {
+.msg-modal .modal-content .btn-fail {
   background-color: #F54847;
 }
 
-.modal .modal-content ul {
+.msg-modal .modal-content ul {
   padding: 0;
   margin: 0;
 }
