--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -855,6 +855,7 @@ a:hover {
           height: 44px;
           line-height: 44px;
           font-size: $font-size-m;
+          margin-bottom: 0;
           cursor: pointer;
           user-select: none;
 
@@ -866,6 +867,69 @@ a:hover {
           a {
             margin-left: 8px;
             line-height: 44px;
+          }
+        }
+
+        .item-detail {
+          background: #fafafa;
+          border: 1px solid #efefef;
+          padding: 10px 0;
+          font-size: $font-size-m;
+          color: #666;
+
+          span {
+            cursor: pointer;
+
+            a {
+              margin-left: 13px;
+              padding: 5px 10px;
+              line-height: 44px;
+            }
+          }
+
+          &:before {
+            content: "";
+            border-left: 9px solid transparent;
+            border-right: 9px solid transparent;
+            border-bottom: 9px solid #efefef;
+            position: absolute;
+            top: -9px;
+          }
+          &:after {
+            content: "";
+            border-left: 7px solid transparent;
+            border-right: 7px solid transparent;
+            border-bottom: 7px solid #fafafa;
+            position: absolute;
+            top: -8px;
+
+          }
+        }
+
+        .item-detail.st {
+          &:before {
+            left: 58px;
+          }
+          &:after {
+            left: 60px;
+          }
+        }
+
+        .item-detail.nd {
+          &:before {
+            left: 258px;
+          }
+          &:after {
+            left: 260px;
+          }
+        }
+
+        .item-detail.rd {
+          &:before {
+            left: 458px;
+          }
+          &:after {
+            left: 460px;
           }
         }
       }
