--- a/public/css/my.css
+++ b/public/css/my.css
@@ -279,6 +279,10 @@ a:hover {
   border-bottom: none;
 }
 
+.my-nav-tabs-top .nav-tabs .nav-item:first-child a.nav-link {
+  border-left: 1px solid #C9CACA;
+}
+
 .main-bg {
   background-color: #EFEFEF;
 }
