--- a/public/css/my.css
+++ b/public/css/my.css
@@ -30,6 +30,14 @@ a:hover {
   color: #D83856;
 }
 
+.color-light-gray {
+  color: #727171;
+}
+
+.font-size-s {
+  font-size: 12px;
+}
+
 .divider {
   color: #C9CACA;
 }
@@ -250,6 +258,11 @@ a:hover {
   border-right: none;
   border-left: none;
   border-bottom: 2px solid #D83856;
+}
+
+.my-nav-tabs .list-group-item {
+  padding-top: 30px;
+  padding-left: 40px;
 }
 
 .my-nav-tabs-top .nav-tabs {
@@ -924,5 +937,45 @@ a:hover {
 
 .draft-table tr:hover td {
   background-color: rgba(181, 181, 182, 0.1);
+}
+
+.commission {
+  padding: 30px 35px;
+  border: 1px solid rgba(216, 56, 86, 0.1);
+  margin-bottom: 16px;
+}
+
+.commission p {
+  margin-bottom: 0;
+}
+
+.commission .row:nth-child(2) {
+  padding-top: 22px;
+}
+
+.commission .row:nth-child(2) .col:nth-child(2) {
+  margin-left: 53px;
+}
+
+.commission .row:nth-child(2) .col:nth-child(2) p:nth-child(1) span {
+  padding-left: 8px;
+  padding-right: 8px;
+  opacity: 0.3;
+}
+
+.commission .row:nth-child(2) .col:nth-child(2) p:nth-child(2) {
+  margin-top: 20px;
+}
+
+.commission .row:nth-child(2) .col:nth-child(2) p:nth-child(3) {
+  margin-top: 10px;
+}
+
+.commission .row:nth-child(2) .col:nth-child(2) p:nth-child(4) {
+  margin-top: 10px;
+}
+
+.commission .row:nth-child(2) .col:nth-child(2) p:nth-child(5) {
+  margin-top: 20px;
 }
 
