--- a/resources/sass/my.scss
+++ b/resources/sass/my.scss
@@ -60,6 +60,14 @@ a:hover {
   color: $color-red;
 }
 
+.color-light-gray {
+  color: $color-light-gray;
+}
+
+.font-size-s {
+  font-size: $font-size-s;
+}
+
 .divider {
   color: $color-border-gray;
 }
@@ -277,6 +285,11 @@ a:hover {
       }
     }
   }
+
+  .list-group-item {
+    padding-top: 30px;
+    padding-left: 40px;
+  }
 }
 
 .my-nav-tabs-top {
@@ -314,17 +327,17 @@ a:hover {
 }
 
 .main-bg {
-    background-color: #EFEFEF;
+  background-color: #EFEFEF;
 
-    .home {
-      padding-top: 30px;
+  .home {
+    padding-top: 30px;
 
-      .banner {
-        width: 100%;
-        min-height: 126px;
-        background-image: url('#{$img-url-home}nav_bg.png');
-        background-size: 100% 100%;
-        margin-bottom: 26px;
+    .banner {
+      width: 100%;
+      min-height: 126px;
+      background-image: url('#{$img-url-home}nav_bg.png');
+      background-size: 100% 100%;
+      margin-bottom: 26px;
     }
 
     .message {
@@ -995,6 +1008,50 @@ a:hover {
     &:hover {
       td {
         background-color: rgba(181,181,182, 0.1);
+      }
+    }
+  }
+}
+
+.commission {
+  padding: 30px 35px;
+  border: 1px solid rgba(216, 56 ,86, 0.1);
+  margin-bottom: 16px;
+
+  p {
+    margin-bottom: 0;
+  }
+
+  .row {
+    &:nth-child(2) {
+      padding-top: 22px;
+
+      .col {
+        &:nth-child(2) {
+          margin-left: 53px;
+
+          p {
+            &:nth-child(1) {
+              span {
+                padding-left: 8px;
+                padding-right: 8px;
+                opacity: 0.3;
+              }
+            }
+            &:nth-child(2) {
+              margin-top: 20px;
+            }
+            &:nth-child(3) {
+              margin-top: 10px;
+            }
+            &:nth-child(4) {
+              margin-top: 10px;
+            }
+            &:nth-child(5) {
+              margin-top: 20px;
+            }
+          }
+        }
       }
     }
   }
