--- a/public/css/less.css
+++ b/public/css/less.css
@@ -212,8 +212,7 @@
   line-height: inherit;
 }
 .bootstrap-datetimepicker-widget .picker-switch td span,
-.bootstrap-datetimepicker-widget .picker-switch td i,
-.bootstrap-datetimepicker-widget .picker-switch td svg {
+.bootstrap-datetimepicker-widget .picker-switch td i {
   line-height: 2.5;
   height: 2.5em;
   width: 100%;
@@ -327,8 +326,7 @@
   cursor: not-allowed;
 }
 .bootstrap-datetimepicker-widget table td span,
-.bootstrap-datetimepicker-widget table td i,
-.bootstrap-datetimepicker-widget table td svg {
+.bootstrap-datetimepicker-widget table td i {
   display: inline-block;
   width: 54px;
   height: 54px;
@@ -338,28 +336,23 @@
   border-radius: 0.25rem;
 }
 .bootstrap-datetimepicker-widget table td span:hover,
-.bootstrap-datetimepicker-widget table td i:hover,
-.bootstrap-datetimepicker-widget table td svg:hover {
+.bootstrap-datetimepicker-widget table td i:hover {
   background: #f8f9fa;
 }
 .bootstrap-datetimepicker-widget table td span.active,
-.bootstrap-datetimepicker-widget table td i.active,
-.bootstrap-datetimepicker-widget table td svg.active {
+.bootstrap-datetimepicker-widget table td i.active {
   background-color: #dee2e6;
   color: #007bff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .bootstrap-datetimepicker-widget table td span.old,
-.bootstrap-datetimepicker-widget table td i.old,
-.bootstrap-datetimepicker-widget table td svg.old {
+.bootstrap-datetimepicker-widget table td i.old {
   color: #dee2e6;
 }
 .bootstrap-datetimepicker-widget table td span.disabled,
 .bootstrap-datetimepicker-widget table td i.disabled,
-.bootstrap-datetimepicker-widget table td svg.disabled,
 .bootstrap-datetimepicker-widget table td span.disabled:hover,
-.bootstrap-datetimepicker-widget table td i.disabled:hover,
-.bootstrap-datetimepicker-widget table td svg.disabled:hover {
+.bootstrap-datetimepicker-widget table td i.disabled:hover {
   background: none;
   color: #dee2e6;
   cursor: not-allowed;
